--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ body {
     background-color: yellow;
 }
 
+.saludo {
+   background-image:url("../img/FONDO-VideoCalls-9.jpg");
+}
+
 h1 {
     color: red
 }
